cmake_minimum_required(VERSION 3.0.0)
project(RecursiveDescentAnalyser VERSION 0.1.0)

add_subdirectory(RecursiveDescentAnalyserLib)

add_executable(RecursiveDescentAnalyser main.cpp)
target_include_directories(RecursiveDescentAnalyser PRIVATE RecursiveDescentAnalyserLib)
target_link_libraries(RecursiveDescentAnalyser PRIVATE RecursiveDescentAnalyserLib)
